<resources>
    <string name="app_name">Farmer\'s Market</string>
    <string name="image_count_sample">5/9</string>
    <string name="product_image">Product Image</string>
    <string name="sample_product_name">Basket of Fresh Mangos</string>
    <string name="sample_price">NGN 350.00</string>
    <string name="sample_available_text">12 items available</string>
    <string name="availableText">%d items available</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="description">About this item</string>
    <string name="similar_items">Similar items</string>
    <string name="title_home">Home</string>
    <string name="title_message">Message</string>
    <string name="title_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_text">Not a member? Sign Up</string>
    <string name="login_text">Already a member? Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="fullname">Full Name</string>
    <string name="lastName">LastName</string>
    <string name="sign_up">Sign Up</string>
    <string name="product">Product</string>
    <string name="recently_viewed">Your recently viewed products</string>
    <string name="close_by">Nearby products</string>
    <string name="sample_miles">30 miles</string>
    <string name="distanceMiles">%d miles</string>
    <string name="search">Search</string>
    <string name="search_product">Search products</string>
    <string name="sales">Sales</string>
    <string name="purchase">Purchase</string>
    <string name="type_a_message">Type a message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_picture">Product picture</string>
    <string name="delete_picture">delete picture</string>
    <string name="post_ad">Post Ad</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="no_items">No items available</string>
    <string name="search_currency">Search currency</string>
    <string name="select_category">Select category</string>
    <string name="sample_currency">USD</string>
    <string name="select_region">Select region</string>
    <string name="updating_location">Updating location…</string>
    <string name="no_title">Title cannot be empty</string>
    <string name="no_desc">Description of product cannot be empty</string>
    <string name="no_price">Fill price for item</string>
    <string name="turn_on_location">Turn on location</string>
    <string name="acquiring_location">Acquiring location…</string>
    <string name="upload_min_1_picture">Upload at least a picture</string>
    <string name="default_currency">USD</string>
    <string name="sample_address">Memphis, Atlanta</string>
    <string name="add_pictures">Add pictures</string>
    <string name="available_qty">Available quantity</string>
    <string name="no_avail_specify">No available quantity specified</string>
    <string name="no_network_connection">No network connection</string>
    <string name="sample_item_bought">12 items purchased</string>
    <string name="sample_purchase_on">purchased on 12–12–2020 23:59</string>
    <string name="interested_ads">Interested Ads</string>
    <string name="my_ads">My Ads</string>
    <string name="viewed_at">Viewed: %s</string>
    <string name="posted_at">Posted: %s</string>
    <string name="add_new_product_require_location">Add new product require location to be enabled</string>
    <string name="ads">Ads</string>
    <string name="yesterday">Yesterday</string>
    <string name="check_email">Check email for verification mail</string>
    <string name="resend_verification_mail">Error: try resending verification mail</string>
    <string name="account_creation_success">Account creation successful</string>
    <string name="confirm_password">Confirm password</string>
    <string name="empty_email_password">cannot have empty fields</string>
    <string name="not_matching_password">Password does not match</string>
    <string name="channel_name">message notifications</string>
    <string name="channel_description">channel for handling message notifications</string>
    <string name="uploading_image">Uploading Image %d of %d</string>
    <string name="image_upload_complete">Image Upload Complete!</string>
    <string name="upload_channel_name">File upload notification</string>
    <string name="upload_channel_description">channel for handling file upload notifications</string>
    <string name="uploading_images">Uploading Images</string>
    <string name="upload_complete">Upload Complete</string>
    <string name="today">Today</string>
    <string name="sample_date">12/01/2021</string>


    <string name="pref_key_dark_mode" translatable="false">key_night_mode</string>
    <string name="pref_dark_theme_title">Dark theme</string>
    <string name="pref_dark_mode_summary">Select a dark or light theme.</string>
    <string name="pref_night_dialog">Set Night mode</string>
    <string name="pref_night_auto" translatable="false">auto</string>
    <string name="pref_dark_theme_on" translatable="false">on</string>
    <string name="pref_dark_theme_off" translatable="false">off</string>
    <string name="night_mode_auto">Automatic</string>
    <string name="dark_theme_mode_on">Dark theme</string>
    <string name="dark_theme_mode_off">Light theme</string>
    <string name="title_preference">Preference</string>
    <string name="log_out">Log Out</string>
    <string name="key_log_out">pref log out</string>
    <string name="pref_key_account">key_account</string>
    <string name="title_account_details">Account details</string>
    <string name="summary_account_details">Contact details, display picture</string>
    <string name="display_name">Display Name</string>
    <string name="refresh_location">Refresh location</string>
    <string name="update">Update</string>
    <string name="update_successful">User profile update successful!</string>
    <string name="update_failed">User profile update failed!</string>
    <string name="require_location">This feature require location to be turned on</string>
    <string name="update_location">Update location</string>
    <string name="string_user_account">User Account</string>
    <string name="string_product_details">Product Details</string>
    <string name="new_ad">New Ad</string>
    <string name="modify_ad">Modify Ad</string>

</resources>