<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceScreen
        android:measureWithLargestChild="false"
        app:iconSpaceReserved="false"
        app:key="@string/pref_key_account"
        app:summary="@string/summary_account_details"
        app:title="@string/title_account_details" />
    <androidx.preference.ListPreference
        android:entries="@array/dark_theme_mode"
        android:entryValues="@array/dark_theme_mode_value"
        android:key="@string/pref_key_dark_mode"
        android:title="@string/pref_dark_theme_title"
        app:iconSpaceReserved="false"
        app:summary="@string/pref_dark_mode_summary" />
    <androidx.preference.PreferenceScreen
        app:iconSpaceReserved="false"
        app:key="@string/key_log_out"
        app:title="@string/log_out" />
</androidx.preference.PreferenceScreen>