<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/chat"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ilatyphi95.farmersmarket.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_productFragment"
            app:destination="@id/productFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.ilatyphi95.farmersmarket.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message">
        <action
            android:id="@+id/action_navigation_message_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>

    <!--    for testing purpose don't forget to remove it-->
    <fragment
        android:id="@+id/productFragment"
        android:name="com.ilatyphi95.farmersmarket.ui.addetails.ProductFragment"
        android:label="@string/string_product_details">
        <action
            android:id="@+id/action_productFragment_self"
            app:destination="@id/productFragment"
            app:popUpTo="@id/productFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="product"
            app:argType="com.ilatyphi95.farmersmarket.data.entities.Product" />
        <action
            android:id="@+id/action_productFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_pager"
        android:name="com.ilatyphi95.farmersmarket.ui.ads.PagerFragment"
        android:label="@string/ads"
        tools:layout="@layout/fragment_pager">
        <action
            android:id="@+id/action_navigation_pager_to_productFragment"
            app:destination="@id/productFragment" />
        <action
            android:id="@+id/action_navigation_pager_to_addProductFragment"
            app:destination="@id/modifyAdFragment" />
    </fragment>
    <fragment
        android:id="@+id/modifyAdFragment"
        android:name="com.ilatyphi95.farmersmarket.ui.modifyad.ModifyAdsFragment"
        android:label="@string/new_ad">
        <argument
            android:name="product"
            android:defaultValue="@null"
            app:argType="com.ilatyphi95.farmersmarket.data.entities.Product"
            app:nullable="true" />
        <action
            android:id="@+id/action_addProductFragment_to_navigation_pager"
            app:destination="@id/navigation_pager" />
    </fragment>

    <fragment
        android:id="@+id/chatFragment"
        android:name="com.ilatyphi95.farmersmarket.ui.chat.ChatFragment"
        tools:layout="@layout/fragment_chat">
        <action
            android:id="@+id/action_chatFragment_to_productFragment"
            app:destination="@id/productFragment" />
        <argument
            android:name="messageId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.ilatyphi95.farmersmarket.ui.registration.SplashFragment"
        android:label=" ">
        <action
            android:id="@+id/action_splashFragment_to_loginFragment2"
            app:destination="@id/loginFragment2"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment2"
        android:name="com.ilatyphi95.farmersmarket.ui.registration.SignUpFragment"
        android:label="@string/sign_up">
        <action
            android:id="@+id/action_signUpFragment2_to_loginFragment2"
            app:destination="@id/loginFragment2"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment2"
        android:name="com.ilatyphi95.farmersmarket.ui.registration.LoginFragment"
        android:label="@string/login">
        <action
            android:id="@+id/action_loginFragment2_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment2_to_signUpFragment2"
            app:destination="@id/signUpFragment2" />
    </fragment>
    <fragment
        android:id="@+id/preferenceFragment"
        android:name="com.ilatyphi95.farmersmarket.ui.settings.PreferenceFragment"
        android:label="@string/title_settings">
        <action
            android:id="@+id/action_preferenceFragment_to_loginFragment2"
            app:destination="@id/loginFragment2"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_preferenceFragment_to_userAccountFragment"
            app:destination="@id/userAccountFragment" />
    </fragment>
    <fragment
        android:id="@+id/userAccountFragment"
        android:name="com.ilatyphi95.farmersmarket.ui.settings.UserAccountFragment"
        android:label="@string/string_user_account"
        tools:layout="@layout/user_account_fragment" />
</navigation>