<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ilatyphi95.farmersmarket.utils.AddItemViewModel" />

        <import type="com.ilatyphi95.farmersmarket.utils.MoneyUtilsKt" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/tiny_margin"
        android:clickable="true"
        android:focusable="true"
        android:onClick="@{() -> viewModel.itemClicked()}"
        android:orientation="vertical"
        android:paddingTop="@dimen/small_margin"
        android:paddingBottom="@dimen/small_margin">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            style="@style/small_product_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="W,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:loadImage="@{viewModel.item.imageUrl}"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:paddingTop="@dimen/small_margin"
            android:text="@{viewModel.item.name}"
            app:layout_constraintBottom_toTopOf="@+id/tvPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sample_product_name" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{MoneyUtilsKt.stringToMoney(viewModel.item.price.toString()).toString()}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvQtyAvail"
            app:layout_constraintStart_toStartOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            tools:text="@string/sample_price" />

        <TextView
            android:id="@+id/tvQtyAvail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            app:availableText="@{viewModel.item.quantity}"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/tvPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice"
            tools:text="@string/sample_item_bought" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/chat_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvQtyAvail"
            app:postedAt="@{viewModel.item.timestamp}"
            tools:text="@string/sample_purchase_on" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>